# ru.tsk-dv.api

./: .env  Cargo.toml  diesel.toml
migrations/2024-07-20-025716_create_users/: up.sql
src/: lib.rs  main.rs  schema.rs
src/modules/: mod.rs
src/modules/registration/: mod.rs
src/modules/registration/controllers/: registration.rs
src/modules/registration/dto/: email_registration.rs  mod.rs
src/modules/registration/errors/: registration.rs  validation.rs
src/modules/registration/services/: mod.rs  registration.rs
src/modules/registration/strategies/: email_registration.rs  mod.rs  registration.rs
src/modules/users/: mod.rs
src/modules/users/controllers/: users.rs
src/modules/users/dto/: user_creation.rs
src/modules/users/models/: user.rs
src/modules/users/repositories/: pg_users.rs  users.rs
src/modules/users/services/: users.rs
src/users/: find_all.rs  mod.rs
