[package]
name = "ru_tsk-dv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8.0"
diesel = { version = "2.2.2", features = ["postgres", "uuid", "chrono"] }
uuid = { version = "1.10.0", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
dotenvy = "0.15"
validator = { version = "0.18.1", features = ["derive"] }
validator_derive = "0.18.1"
